--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 							<!-- SECTION HEADING -->
 							<h2 class="section-heading wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Principales características</h2>
-							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Hemos estudiado la forma en cómo utilizamos nuestros teléfonos móviles. Sabemos que en el lugar de trabajo, la mayoría de los casos, significan una distracción. Creemos que podemos sacar partido de esto y darles un uso que aporte en la mejora de las condiciones laborales de los trabajadores.</p>
+							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Hemos estudiado la forma en cómo utilizamos nuestros teléfonos móviles. Creemos que podemos sacar partido a la gran penetración Smartphones en el mercado y aprovechar esta oportunidad como una forma más de hacer Prevención de Riesgos Laborales.</p>
 
 							<!-- FEATURES LIST WITH ICONS -->
 							<div class="features-icon-list row wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">
