--- a/index.html
+++ b/index.html
@@ -168,41 +168,41 @@
 
 							<!-- SECTION HEADING -->
 							<h2 class="section-heading wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Principales características</h2>
-							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Hemos estudiado la forma en cómo utilizamos nuestros teléfonos móviles. Creemos que podemos sacar partido a la gran penetración Smartphones en el mercado y aprovechar esta oportunidad como una forma más de hacer Prevención de Riesgos Laborales.</p>
+							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Hemos estudiado la forma en cómo utilizamos nuestros teléfonos móviles. Creemos que podemos sacar partido a la gran penetración de los Smartphones en el mercado y aprovechar esta oportunidad como una forma más de hacer Prevención de Riesgos Laborales.</p>
 
 							<!-- FEATURES LIST WITH ICONS -->
 							<div class="features-icon-list row wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">
 								<div class="features-icon-list-item col-sm-6">
 									<i class="icon-eye"></i>
-									<h5>La Prevención en tu bolsillo</h5>
-									<p>Vayas donde vayas, la prevención va contigo.</p>
+									<h5>Factores de Riesgos</h5>
+									<p>Selecciona tu ocupación y encuentra contenidos relevantes</p>
 								</div>
 								<div class="features-icon-list-item col-sm-6">
 									<i class="icon-cup"></i>
-									<h5>Fácil y rápido/h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
+									<h5>Material gráfico</h5>
+									<p>Señalética, afiches y guías en tu móvil</p>
 								</div>
 								<div class="clear"></div>
 								<div class="features-icon-list-item col-sm-6">
 									<i class="icon-equalizer"></i>
-									<h5>Easy to Customize</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
+									<h5>Acciones Preventivas</h5>
+									<p>Encuentra una guía en materia de seguridad</p>
 								</div>
 								<div class="features-icon-list-item col-sm-6">
 									<i class="icon-diamond"></i>
-									<h5>Clean &amp; Elegant Design</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
+									<h5>Matriz de Riesgos Personalizada</h5>
+									<p>Adaptaremos los contenidos a la realidad de tu empresa</p>
 								</div>
 								<div class="clear"></div>
 								<div class="features-icon-list-item col-sm-6">
 									<i class="icon-present"></i>
-									<h5>600++ Retina Icons</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
+									<h5>Material complementario</h5>
+									<p>Encuentra links con información sobre tu labor particular y sus riesgos</p>
 								</div>
 								<div class="features-icon-list-item col-sm-6">
 									<i class="icon-support"></i>
-									<h5>Documentation and Support</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
+									<h5>Respuestas concretas</h5>
+									<p>Encuentra respuesta a problemas concretos sobre PRL</p>
 								</div>
 								<div class="clear"></div>
 							</div>
@@ -229,7 +229,7 @@
 					<h2 class="section-heading text-center wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Ventajas importantes</h2>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Recomendaciones de Seguridad Laboral y Salud Ocupacional dirigidas a trabajadores Chilenos. Observaciones según la ley 16.744, DS 591 y especialistas</p>
+							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Hemos basado nuestra aplicación en lo establecido en la normativa legal vigente en Chile. Incluyendo material diseñado por expertos y dirigido a todo tipo de trabajadores.</p>
 						</div>
 					</div>
 
@@ -240,11 +240,11 @@
 							<ul class="features-list features-list-left wow fadeInLeft animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeInLeft 1s;">
 								<li class="features-list-item">
 									<h5>Interfaz intuitiva</h5>
-									<p>Nuestra aplicación es muy fácil de usar. Está pensada para que cualquier trabajador pueda utilizarla desde su Smartphone</p>
+									<p>Nuestra aplicación es muy fácil de usar. Sólo es necesario saber leer y utilizar un smartphone</p>
 								</li>
 								<li class="features-list-item">
-									<h5>Fully Customizable</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<h5>Personalizable</h5>
+									<p>Selecciona cómo quieres ver la información. Alertas y recordatorios de Acciones Preventivas</p>
 								</li>
 							</ul>
 						</div>
@@ -253,12 +253,12 @@
 						<div class="col-md-4 col-md-push-4 col-sm-6">
 							<ul class="features-list features-list-right wow fadeInRight animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeInRight 1s;">
 								<li class="features-list-item">
-									<h5>SEO Friendly</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<h5>Disponible 24/7</h5>
+									<p>En cualquier lugar y a cualquier hora. Utiliza tus horarios libres o trayectos para aprender sobre Prevención de Riesgos en tu trabajo.</p>
 								</li>
 								<li class="features-list-item">
-									<h5>8 Predefined Color Schemes</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<h5>Aprende colaborativamente</h5>
+									<p>Comparte información y experiencias con tus compañeros de trabajo.</p>
 								</li>
 							</ul>
 						</div>
