--- a/index.html
+++ b/index.html
@@ -85,18 +85,21 @@
 								<a href="#home">Inicio</a>
 							</li>
 							<li class="">
-								<a href="#features-icons">Caracteristicas</a>
+								<a href="#caracteristicas">Caracteristicas</a>
 
 							</li>
 							<li>
-								<a href="#caracteristicas">Ventajas</a>
+								<a href="#ventajas">Ventajas</a>
 
 							</li>
 							<li class="">
 								<a href="#video">Video Promocional</a>
+							</li>							
+							<li class="">
+								<a href="#resumen">Resumen</a>
 							</li>
 							<li class="">
-								<a href="#pricing">Planes Empresas</a>
+								<a href="#planes">Planes Empresas</a>
 							</li>
 						</ul>
 
@@ -160,7 +163,7 @@
 			</section>
 
 			
-			<section id="features-icons" class="features-icons-section section">
+			<section id="caracteristicas" class="features-icons-section section">
 				<div class="container">
 
 					<div class="row">
@@ -222,7 +225,7 @@
 			FEATURES SECTION
 			=================================
 			-->
-			<section id="caracteristicas" class="features-section section">
+			<section id="ventajas" class="features-section section">
 				<div class="container">
 
 					<!-- SECTION HEADING -->
@@ -298,10 +301,7 @@
 						<div class="col-md-10 col-md-offset-1">
 
 							<div class="video-embed wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">
-
-							
-								<!-- VIDEO EMBED FROM YOUTUBE: please change the URL -->
-								<iframe width="560" height="315" src="//www.youtube.com/embed/Pm9t5VdS_Q0" frameborder="0" allowfullscreen></iframe>
+								<iframe src="//player.vimeo.com/video/107103598?title=0&amp;byline=0&amp;portrait=0" width="560" height="315" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
@@ -314,7 +314,7 @@
 			DESCRIPTION SECTION
 			=================================
 			-->
-			<section id="description" class="description-section section">
+			<section id="resumen" class="description-section section">
 				<div class="container">
 
 					<div class="row">
@@ -386,7 +386,7 @@
 			PRICING SECTION
 			=================================
 			-->
-			<section id="pricing" class="pricing-section section">
+			<section id="planes" class="pricing-section section">
 				<div class="container">
 
 					<!-- SECTION HEADING -->
