--- a/index.html
+++ b/index.html
@@ -321,15 +321,15 @@
 						<div class="col-md-7">
 
 							<!-- SECTION HEADING -->
-							<h2 class="section-heading wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">A Long Description</h2>
-							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Describe your mobile app in even longer paragraphs. You might include a nice icon list on this section too. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin. Quisque convallis nec justo sed consectetur. Duis convallis nunc quis arcu sollicitudin iaculis. <a href="#">Nunc id libero malesuada</a> arcu porta tempus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut vestibulum, nunc eget sollicitudin euismod, erat risus tempor augue, eu vulputate nibh lorem in leo.</p>
+							<h2 class="section-heading wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Resumen</h2>
+							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;"><a href="#">Somos la primera alternativa en el mercado</a> que ofrece una solución móvil orientada a los Smartphones en materia de PRL. El trabajador puede llevar consigo a todas partes material que será útil para complementar inducciones y capacitaciones realizadas en la empresa. Otorgamos, no sólo portabilidad, sino también, una manera amigable de hacer Prevención, adaptándonos a la tendencia de uso masivo de smartphones y tabletas.</p>
 
 							<!-- ICON LIST -->
 							<ul class="list-with-icons wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">
-								<li><i class="icon-action-redo"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-								<li><i class="icon-arrow-right"></i>Pellentesque dapibus leo mattis metus condimentum sollicitudin.</li>
-								<li><i class="icon-layers"></i>Quisque convallis nec justo sed consectetur.</li>
-								<li><i class="icon-bell"></i>Duis convallis nunc quis arcu sollicitudin iaculis. Nunc id libero malesuada arcu porta tempus.</li>
+								<li><i class="icon-action-redo"></i>Utiliza un lenguaje simple y amigable, dirigido a todo tipo de trabajadores</li>
+								<li><i class="icon-arrow-right"></i>Permite profundizar temas que charlas o capacitaciones no logran abarcar</li>
+								<li><i class="icon-layers"></i>Genera un respositorio de datos útil y permanente en el tiempo</li>
+								<li><i class="icon-bell"></i>Permite crear alertas sobre acciones preventivas a realizar dentro de la empresa</li>
 							</ul>
 
 						</div>
@@ -363,13 +363,13 @@
 					<div class="testimonials-carousel">
 
 						<ul class="testimonial-items owl-carousel wow fadeIn owl-theme" data-wow-duration="1s" style="opacity: 1; display: block; visibility: hidden; -webkit-animation: none 1s;">
-							<div class="owl-wrapper-outer autoHeight" style="height: 196px;">
-								<div class="owl-wrapper" style="width: 9120px; left: 0px; display: block;">
-									<div class="owl-item" style="width: 1140px;">
+							<div class="owl-wrapper-outer autoHeight">
+								<div class="owl-wrapper">
+									<div class="owl-item">
 										<li>
-											<div class="testimonial-text">Cambiar la cultura preventiva en Chile es una labor de todos. Utilizar con esta finalidad las nuevas posibilidades tecnológicas al alcance de todos, es una oportunidad que no podemos dejar pasar.</div>
-									<div class="testimonial-name">Nicolás Silva, CEO Medidas Preventivas Inc.</div>
-
+											<div class="testimonial-text">Mejorar la cultura preventiva en Chile es una labor de todos. Utilizar con esta finalidad las nuevas tecnologías, es una oportunidad que no podemos dejar pasar.</div>
+									<div class="testimonial-name">Nicolás Silva, Fundador Medidas Preventivas Inc.</div>
+a
 										</li>
 									</div>
 								</div>
@@ -406,7 +406,7 @@
 								<div class="pricing-package-strip"></div>
 								<div class="pricing-package-header">
 									<h4>Plan Basico</h4>
-									<p>Hasta 3 trabajadores</p>
+									<p>Uso individual</p>
 									<div class="price">
 										<span class="price-currency">$</span>
 										<span class="price-number">0</span>
@@ -432,7 +432,7 @@
 									<p>Hasta 10 Trabajadores</p>
 									<div class="price">
 										<span class="price-currency">$</span>
-										<span class="price-number">49</span>
+										<span class="price-number">69<span style="font-size:0.3em;">.000</span></span>
 										<span class="price-period">al mes</span>
 									</div>
 								</div>
@@ -451,11 +451,11 @@
 							<div class="pricing-package">
 								<div class="pricing-package-strip"></div>
 								<div class="pricing-package-header">
-									<h4>Plan Premium</h4>
+									<h4>Plan Avanzado</h4>
 									<p>50+ Trabajodres</p>
 									<div class="price">
 										<span class="price-currency">$</span>
-										<span class="price-number">179</span>
+										<span class="price-number">169<span style="font-size:0.3em;">.000</span></span>
 										<span class="price-period">al mes</span>
 									</div>
 								</div>
@@ -485,7 +485,7 @@
 					<h2 class="section-heading text-center wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Screenshots</h2>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Un vistazo de sólo algunas de las increíbles opciones de nuestra App.</p>
+							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Una visita rápida por la aplicación.</p>
 						</div>
 					</div>
 
