--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 					<h2 class="section-heading text-center wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Ventajas importantes</h2>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Nuestra aplicación en lo establecido en la normativa legal vigente en Chile. Incluyendo material diseñado por expertos y dirigido a todo tipo de trabajadores.</p>
+							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Basamos nuestra aplicación en lo establecido en la normativa legal vigente en Chile. Incluyendo material diseñado por expertos y dirigido a todo tipo de trabajadores.</p>
 						</div>
 					</div>
 
