--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
 							<!-- SECTION HEADING -->
 							<h2 class="section-heading wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">Resumen</h2>
-							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;"><a href="#">Somos la primera alternativa en el mercado</a> que ofrece una solución móvil orientada a los Smartphones en materia de PRL. El trabajador puede llevar consigo a todas partes material que será útil para complementar inducciones y capacitaciones realizadas en la empresa. Otorgamos, no sólo portabilidad, sino también, una manera amigable de hacer Prevención, adaptándonos a la tendencia de uso masivo de smartphones y tabletas.</p>
+							<p class="wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;"><a href="#">Somos la primera alternativa en el mercado</a> que ofrece una solución 100% móvil orientada a los Smartphones en materia de PRL. El trabajador puede llevar consigo a todas partes material que será útil para complementar inducciones y capacitaciones realizadas en la empresa. Otorgamos, no sólo portabilidad, sino también, una manera amigable de hacer Prevención, adaptándonos a la tendencia de uso masivo de smartphones y tabletas.</p>
 
 							<!-- ICON LIST -->
 							<ul class="list-with-icons wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; -webkit-animation: fadeIn 1s;">
